--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,11 @@ add_definitions(-DBOOST_SYSTEM_NO_DEPRECATED)
 
 set(librp /opt/redpitaya/lib/librp.so)
 set(librp_include /opt/redpitaya/include)
+set(SRCS generator.cpp generator_thread.cpp buffer.cpp reader.cpp reader_thread.cpp kiss_fft.c)
 
-add_executable(uwoc_sigGen main.cpp generator.cpp generator_thread.cpp buffer.cpp reader.cpp reader_thread.cpp kiss_fft.c)
+add_library(uwoc_sigGen ${SRCS})
 target_include_directories(uwoc_sigGen PUBLIC ${Boost_INCLUDE_DIRS} ${librp_include})
 target_link_libraries(uwoc_sigGen PUBLIC ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${librp})
+
+add_executable(test main.cpp)
+target_link_libraries(test PUBLIC uwoc_sigGen)
